1.1.1
- Updated JRE to Java 17
- Improved telemetry removal function
- Moved app registry keys to set on app launch
- Minor code changes and improvements